<resources>
    <string name="app_name">Transp Check</string>

    <string name="app_full_package">br.com.idbservice.apptranspcheck</string>

    <string name="url_auth">http://192.168.0.3:8080/TranspCheckServer/auth</string>
    <string name="url_transporte">http://192.168.0.3:8080/TranspCheckServer/transporte</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Esse usuario e invalido</string>
    <string name="error_invalid_password">A senha e muito curta</string>
    <string name="error_incorrect_password">A senha esta incorreta</string>
    <string name="error_field_required">Esse campo e obrigatorio</string>

    <string name="activity_login_title">Login</string>

    <!-- Strings related to transport -->
    <string name="activity_transport_title">Transporte Ativo</string>

    <string name="label_origem">Origem</string>
    <string name="label_destino">Destino</string>

    <string name="btn_label_canhoto">Canhoto</string>
    <string name="btn_label_assinatura">Assinatura</string>
    <string name="btn_label_enviar">Enviar</string>

    <string name="dialog_title_sucesso">Sucesso</string>
    <string name="dialog_title_atencao">Atenção</string>
    <string name="msg_required_canhoto">A foto do canhoto é necessaria</string>
    <string name="msg_required_assinatura">A assinatura do canhoto é necessaria</string>
    <string name="msg_upload_success">Imagens enviadas com sucesso</string>
    <string name="msg_upload_unsuccess">Nao foi possivel enviar as imagens</string>

    <string name="msg_login_null">Nao foi encontrado nenhum usuario com essa autenticacao</string>

    <!--Exceptions-->
    <string name="ex_servidor_nao_encontrado">Nao foi possivel conectar ao servidor de dados</string>
</resources>
